--- a/BMI.html
+++ b/BMI.html
@@ -5,9 +5,9 @@
   <title>BMI</title>
 </head>
 <body>
-<input type="number" id="weight">
+<input type="number" id="weight"> weight
 <br>
-<input type="number" id="height">
+<input type="number" id="height"> height
 <button onclick="kt()">Kiem tra</button>
 <p id="kq"></p>
 <script>
